--- a/style.css
+++ b/style.css
@@ -5,17 +5,47 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: gold;
 }
 
 .book-form-wrapper {
   padding: 1rem;
-  background: red;
+  background: black;
   margin-bottom: 1em;
+  color: white;
 }
 
 .container {
   max-width: 800px;
   margin-inline: auto;
+}
+
+.book-form {
+  width: 100%;
+}
+
+.book-form__submit {
+  background-color: gold;
+  border: none;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+fieldset {
+  border-style: dashed;
+  border-color: gold;
+  padding: 1.25em;
+  display: flex;
+  justify-content: space-between;
+}
+
+legend {
+  font-weight: 700;
+  padding: 1em;
+  font-size: 1.25rem;
 }
 
 .books-headings {
@@ -26,6 +56,7 @@ body {
   padding: 1em;
   font-weight: bold;
   border-bottom: 2px solid black;
+  text-transform: uppercase;
 }
 
 .books-headings > *,
@@ -48,5 +79,24 @@ body {
 }
 
 .books-item:nth-child(even) {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(235, 199, 0);
+}
+
+.status,
+.delete {
+  cursor: pointer;
+  padding: 1em;
+  border: none;
+  min-width: 80%;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+.status[value="Not read"] {
+  background: goldenrod;
+}
+
+.status[value="Read"] {
+  background: greenyellow;
 }
